<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackground"
    tools:context=".ui.SignupActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/margin_large"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
      >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/size_0"
            android:clipToPadding="false"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                style="@style/PrimaryTextSemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/mandatory_field" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/labelFirstName"
                    style="@style/PrimaryTextSemiBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/OutlineEditTextNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtFirstName"
                        style="@style/PrimaryEditTextRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:maxLength="@integer/max_username_length"
                        android:maxLines="@integer/max_username_lines" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/labelLastName"
                    style="@style/PrimaryTextSemiBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/OutlineEditTextNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtLastName"
                        style="@style/PrimaryEditTextRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:maxLength="@integer/max_username_length"
                        android:maxLines="@integer/max_username_lines" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/labelEmail"
                    style="@style/PrimaryTextSemiBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_label" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/OutlineEditTextNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmail"
                        style="@style/PrimaryEditTextRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLength="@integer/max_email_length"
                        android:maxLines="@integer/max_email_lines" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/labelPassword"
                    style="@style/PrimaryTextSemiBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/OutlineEditTextNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    app:endIconMode="password_toggle"
                    app:hintEnabled="false"
                    app:passwordToggleDrawable="@drawable/password_toggle"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        style="@style/PrimaryEditTextRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLength="@integer/max_password_length"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/labelPhoneNo"
                    style="@style/PrimaryTextSemiBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/OutlineEditTextNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPhone"
                        style="@style/PrimaryEditTextRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLength="@integer/max_password_length"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_large"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/btnTerms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="-5dp"
                    android:layout_marginEnd="@dimen/size_0"
                    android:paddingStart="-5dp"
                    android:paddingEnd="@dimen/size_0"
                    app:buttonTint="@color/colorPrimary"
                    app:useMaterialThemeColors="false" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtTerms"
                    style="@style/PrimaryTextRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/size_5"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:gravity="center"
                    android:maxLines="2"
                    android:padding="@dimen/size_0"
                    android:text="@string/terms_and_conditions_des"
                    android:textSize="@dimen/text_small" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        style="@style/SubmitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/margin_normal"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>