<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackground"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:id="@+id/loginLay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
       app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/labelEmail"
                style="@style/PrimaryTextSemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_label" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/OutlineEditTextNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    style="@style/PrimaryEditTextRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/labelPassword"
                style="@style/PrimaryTextSemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/OutlineEditTextNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                app:endIconMode="password_toggle"
                app:hintEnabled="false"
                app:passwordToggleDrawable="@drawable/password_toggle"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    style="@style/PrimaryEditTextRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtForgotPassword"
                style="@style/SecondaryTextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/margin_small"
                android:gravity="end"
                android:maxLines="2"
                android:padding="@dimen/size_0"
                android:text="@string/forgot_password"
                android:textSize="@dimen/text_small" />

        </LinearLayout>

        <TextView
            style="@style/PrimaryTextRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/login_with_social"
            android:textColor="@color/colorAccentText"
            android:textSize="@dimen/text_small" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivApple"
                android:layout_width="@dimen/iv_normal"
                android:layout_height="@dimen/iv_normal"
                android:layout_marginStart="@dimen/size_0"
                android:layout_marginEnd="@dimen/margin_very_large"

                android:src="@drawable/apple_icon" />

            <ImageView
                android:id="@+id/ivGoogle"
                android:layout_width="@dimen/iv_normal"
                android:layout_height="@dimen/iv_normal"
                android:layout_marginStart="@dimen/size_0"
                android:layout_marginEnd="@dimen/margin_very_large"
                android:src="@drawable/google_icon" />

            <ImageView
                android:id="@+id/ivPhone"
                android:layout_width="@dimen/iv_normal"
                android:layout_height="@dimen/iv_normal"
                android:layout_marginStart="@dimen/size_0"
                android:layout_marginEnd="@dimen/size_0"
                android:src="@drawable/mobile_icon" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        style="@style/SubmitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/signin"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>